finsihed the survey html page with all of the questions and correct forms

--- a/app/public/home.html
+++ b/app/public/home.html
@@ -37,7 +37,7 @@
   </head>
   <body>
     <div class="container">
-      <div class="jumbotron text-center">
+      <div class="jumbotron text-center" id="homePage">
         <h1 class="display-4">
           Quarantine Friend Finder <i class="fas fa-street-view"></i>
         </h1>
