the localhost is now running and shows the home.html page. Just put the link the to the survey page in the anchor tag on the home page

--- a/app/public/home.html
+++ b/app/public/home.html
@@ -54,7 +54,7 @@
         </p>
         <p>Click the button below:</p>
         <p class="lead">
-          <a class="btn btn-success btn-lg" href="#" role="button"
+          <a class="btn btn-success btn-lg" href="/survey" role="button"
             >Stary Survey</a
           >
         </p>
