Added the app.use static so that the css would show on localhost

--- a/app/public/home.html
+++ b/app/public/home.html
@@ -32,7 +32,7 @@
       integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="/app/public/css/style.css" />
+    <link rel="stylesheet" type="text/css" href="css/style.css" />
     <title>Quarantine Friend Finder</title>
   </head>
   <body>
@@ -54,7 +54,7 @@
         </p>
         <p>Click the button below:</p>
         <p class="lead">
-          <a class="btn btn-success btn-lg" href="/survey" role="button"
+          <a class="btn btn-dark btn-lg" href="/survey" role="button"
             >Stary Survey</a
           >
         </p>
