finally got the sever js to work properly, can now see the api friends from home.html, changed some styling on survey.html

--- a/app/public/home.html
+++ b/app/public/home.html
@@ -60,7 +60,8 @@
         </p>
       </div>
       <div class="links">
-        <a href=""> API Friends List</a> | <a href="">GitHub Repo</a>
+        <a href="/api/friends"> API Friends List</a> |
+        <a href="">GitHub Repo</a>
       </div>
     </div>
   </body>
