--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -32,15 +32,13 @@
       integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="/app/public/css/style.css" />
+    <link rel="stylesheet" href="css/style.css" />
     <title>Quarantine Friend Finder</title>
   </head>
-  <body>
+  <body id="surveyPage">
     <div class="container">
-      <!-- As a link -->
-
       <header class="text-center">
-        <h1 class="display-3">Ready Begin Survey</h1>
+        <h1 class="display-3">Take Survey</h1>
         <br />
         <div>
           Before you begin enter your name and a profile picture. Only then can
