got the modal kind of working it just doesn't show who the best match is but the form does have some validation where if the user hasnt filled out the survey properly the correct match will not be shown

--- a/app/public/home.html
+++ b/app/public/home.html
@@ -61,7 +61,7 @@
       </div>
       <div class="links">
         <a href="/api/friends"> API Friends List</a> |
-        <a href="">GitHub Repo</a>
+        <a href="https://github.com/niashagrant/FriendFinder">GitHub Repo</a>
       </div>
     </div>
   </body>
